--- a/defense/Jensen_PhD_Defense.tex
+++ b/defense/Jensen_PhD_Defense.tex
@@ -1,4 +1,4 @@
-% Created 2024-03-02 Sat 11:04
+% Created 2024-03-02 Sat 11:50
 % Intended LaTeX compiler: xelatex
 \documentclass[presentation, aspectratio=1610]{beamer}
 \usepackage{graphicx}
@@ -48,10 +48,49 @@
 \tableofcontents
 \end{frame}
 
-\begin{frame}[label={sec:org0fde00b}]{Acknowledgments}
+\begin{frame}[label={sec:org77f72a6}]{A PhD\ldots{}offense?}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{/home/ajensen123@ad.ufl.edu/figures/raster/thesis_defense_2x.png}
+\end{center}
+\end{column}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{/home/ajensen123@ad.ufl.edu/figures/raster/phd_offense.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+\begin{frame}[label={sec:org9bfe8a8}]{A PhD\ldots{}offense?}
+\begin{center}
+\includegraphics[width=.9\linewidth]{/home/ajensen123@ad.ufl.edu/figures/raster/banks_dissertation.png}
+\end{center}
+\end{frame}
+\begin{frame}[label={sec:org4c4dfe1}]{A PhD\ldots{}offense?}
+\begin{center}
+\includegraphics[width=.9\linewidth]{/home/ajensen123@ad.ufl.edu/figures/raster/nichols_dissertation.png}
+\end{center}
+\end{frame}
+\begin{frame}[label={sec:org7dd91cd}]{A PhD\ldots{}offense?}
+\begin{center}
+\includegraphics[width=.9\linewidth]{/home/ajensen123@ad.ufl.edu/figures/raster/allen_dissertation.png}
+\end{center}
+\end{frame}
+\begin{frame}[label={sec:org2b00bae}]{A PhD\ldots{}offense?}
+\begin{center}
+\includegraphics[width=.9\linewidth]{/home/ajensen123@ad.ufl.edu/figures/raster/costello_dissertation.png}
+\end{center}
+\end{frame}
+\begin{frame}[label={sec:org1ce3723}]{A PhD\ldots{}offense?}
+\begin{center}
+\includegraphics[width=.9\linewidth]{/home/ajensen123@ad.ufl.edu/figures/raster/silva_dissertation.png}
+\end{center}
+\end{frame}
+\begin{frame}[label={sec:org07b5eff}]{Acknowledgments}
 I would like to thank the McJunkin Family Charitable Foundation for their generous grant that supports this work.
 \end{frame}
-\begin{frame}[label={sec:orgb5eb298}]{The Problem}
+\begin{frame}[label={sec:orgd9c4712}]{The Problem}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -75,10 +114,10 @@ I would like to thank the McJunkin Family Charitable Foundation for their genero
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org50ab10e}]{Our Proposition}
+\begin{frame}[label={sec:orgb126972}]{Our Proposition}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
-Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practical}} and \alert{\alert{inexpensive}} technology that allows them to \alert{\alert{measure}} a patient's knee kinematics during \alert{\alert{activities of daily living}}.
+Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practical}} and \alert{\alert{inexpensive}} technology that allows them to \alert{\alert{measure}} a patient's joint kinematics during \alert{\alert{activities of daily living}}.
 \end{column}
 \begin{column}{0.55\columnwidth}
 \begin{center}
@@ -87,7 +126,7 @@ Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practica
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgd7586b0}]{Constraints}
+\begin{frame}[label={sec:org3a59c62}]{Constraints}
 \begin{columns}
 \begin{column}{0.45\columnwidth}
 \begin{itemize}
@@ -104,13 +143,13 @@ Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practica
 \end{columns}
 \end{frame}
 \section{Background}
-\label{sec:org9a9c02b}
-\begin{frame}[label={sec:org21dd2b3}]{Background - Projective Geometry}
+\label{sec:org5581728}
+\begin{frame}[label={sec:orgdc32825}]{Background - Projective Geometry}
 \begin{center}
 \includegraphics[width=0.8\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/perspective-projection.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org4b95aaa}]{Background - Model-Image Registration}
+\begin{frame}[label={sec:orgf7a807d}]{Background - Model-Image Registration}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 If we know the projective parameters of the fluoroscopy machine, can we tinker with \(T^{cam}_{implant}\) so that our virtual projection matches the fluoroscopic image?
@@ -124,7 +163,7 @@ If we know the projective parameters of the fluoroscopy machine, can we tinker w
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgaa852c7}]{Background - Model-Image Registration}
+\begin{frame}[label={sec:orgbdac73c}]{Background - Model-Image Registration}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 If we know the projective parameters of the fluoroscopy machine, can we tinker with \(T^{cam}_{implant}\) so that our virtual projection matches the fluoroscopic image?
@@ -138,7 +177,7 @@ If we know the projective parameters of the fluoroscopy machine, can we tinker w
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org165a824}]{Historical Overview}
+\begin{frame}[label={sec:org464ad3c}]{Historical Overview}
 Many different approaches have attempted to solve the model-image registration problem.
 \begin{itemize}
 \item Pre-computed projections
@@ -148,7 +187,7 @@ Many different approaches have attempted to solve the model-image registration p
 \item Roentgen Stereophotogrammetry
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org4eee183}]{Pre-Computed Projections}
+\begin{frame}[label={sec:org54eb546}]{Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -171,7 +210,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgb77b1c1}]{Limitations of Pre-Computed Projections}
+\begin{frame}[label={sec:orged62f62}]{Limitations of Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -196,7 +235,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org433f18f}]{Motion Capture (MoCap)}
+\begin{frame}[label={sec:org301868f}]{Motion Capture (MoCap)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -219,7 +258,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgc38549e}]{Limitations of Motion Capture}
+\begin{frame}[label={sec:org6155b37}]{Limitations of Motion Capture}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Skin Mounted
@@ -245,7 +284,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orged99fd0}]{Biplane Imaging}
+\begin{frame}[label={sec:org2e687c1}]{Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -269,7 +308,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org05fcb5c}]{Limitations of Biplane Imaging}
+\begin{frame}[label={sec:orgca5e90a}]{Limitations of Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -290,7 +329,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgd858ff0}]{Iterative Projections}
+\begin{frame}[label={sec:org5e426a9}]{Iterative Projections}
 \begin{columns}
 \begin{column}{0.54\columnwidth}
 \begin{itemize}
@@ -315,7 +354,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org430ec96}]{Limitations of (historic) Iterative Projection Methods}
+\begin{frame}[label={sec:org7729467}]{Limitations of (historic) Iterative Projection Methods}
 \begin{columns}
 \begin{column}{0.54\columnwidth}
 \begin{itemize}
@@ -342,7 +381,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org0a3f7c7}]{Roentgen Stereophotogrammetry (RSA)}
+\begin{frame}[label={sec:org5e6fab2}]{Roentgen Stereophotogrammetry (RSA)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -360,7 +399,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgffa2693}]{Limitations of RSA}
+\begin{frame}[label={sec:orge4e8995}]{Limitations of RSA}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -379,8 +418,8 @@ Bone Pins
 \end{columns}
 \end{frame}
 \section{Aims}
-\label{sec:org676d9f8}
-\begin{frame}[label={sec:orgfc169bb}]{Aims}
+\label{sec:org1ec46f5}
+\begin{frame}[label={sec:org298ccd2}]{Aims}
 \alert{Aim 1:} Joint Track Machine Learning: An Autonomous Method of Measuring Total Knee Arthroplasty Kinematics From Single-Plane X-Ray Images\footnote{Published in the Journal of Arthroplasty \autocite{jensenJointTrackMachine2023}}
 \vfill
 \alert{Aim 2:} Correcting Symmetric Implant Ambiguity in Measuring Total Knee Arthroplasty Kinematics from Single-Plane Fluoroscopy \footnote{In Revision for Publication in the Journal of Biomechanics}
@@ -390,11 +429,11 @@ Bone Pins
 \alert{Aim 4:} This will definitely work on shoulders, right?\footnote{In Review for Publication in the Journal of Computers in Biology and Medicine}
 \end{frame}
 \subsection{Aim 1 - Joint Track Machine Learning}
-\label{sec:org65244ef}
-\begin{frame}[label={sec:org681e323}]{Goal}
+\label{sec:org36138a8}
+\begin{frame}[label={sec:orgb91ce25}]{Goal}
 Demonstrate the feasibility of a fully autonomous, model-image registration pipeline.
 \end{frame}
-\begin{frame}[label={sec:orgfece7e0}]{Method}
+\begin{frame}[label={sec:orge745cdf}]{Method}
 \begin{itemize}
 \item Three-tiered approach
 \begin{itemize}
@@ -407,7 +446,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/jtml-pipeline.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org39477e8}]{Autonomous Implant Detection Using Convolutional Neural Networks}
+\begin{frame}[label={sec:org08cc70f}]{Autonomous Implant Detection Using Convolutional Neural Networks}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -425,7 +464,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org33ee232}]{Neural Network Data}
+\begin{frame}[label={sec:orgccea869}]{Neural Network Data}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -448,7 +487,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org6b45106}]{Neural Network Robustness}
+\begin{frame}[label={sec:org8fe0042}]{Neural Network Robustness}
 \begin{itemize}
 \item Additional augmentations introduced during training \autocite{buslaevAlbumentationsFastFlexible2020}.
 \end{itemize}
@@ -456,7 +495,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=.9\linewidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/augmentations.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org2990e56}]{Normalized Fourier Descriptor Shape Libraries}
+\begin{frame}[label={sec:org5a4ca88}]{Normalized Fourier Descriptor Shape Libraries}
 \begin{columns}
 \begin{column}{0.37\columnwidth}
 \begin{itemize}
@@ -474,7 +513,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org50bd93b}]{Pose Refinement Using Global Optimization}
+\begin{frame}[label={sec:org62c2b3d}]{Pose Refinement Using Global Optimization}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -492,7 +531,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org29afc8c}]{Contour-based Objective Function}
+\begin{frame}[label={sec:orge727f60}]{Contour-based Objective Function}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -518,7 +557,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orga927d09}]{Improving Robustness}
+\begin{frame}[label={sec:org508d5c8}]{Improving Robustness}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -533,7 +572,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org832a87a}]{Optimization Routine}
+\begin{frame}[label={sec:org8d3f95c}]{Optimization Routine}
 \begin{itemize}
 \item No analytic form of the objective function exists, it \alert{\alert{must}} be sampled at points of interest.
 \begin{itemize}
@@ -541,7 +580,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orge355936}]{Lipschitzian Optimization}
+\begin{frame}[label={sec:orgb8f4804}]{Lipschitzian Optimization}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -563,7 +602,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgf5509a7}]{Lipschitzian Optimization without the Lipschitz Constant}
+\begin{frame}[label={sec:org63992cd}]{Lipschitzian Optimization without the Lipschitz Constant}
 \begin{center}
 \includegraphics[width=2.5in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/jones-direct-title.png}
 \end{center}
@@ -578,7 +617,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=2.5in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/direct-1D.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgaeb5aa0}]{Trisecting Region}
+\begin{frame}[label={sec:org4bab37a}]{Trisecting Region}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{equation*}
@@ -604,7 +643,7 @@ Where
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org2d201e5}]{Another Iteration}
+\begin{frame}[label={sec:org5b83838}]{Another Iteration}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{equation*}
@@ -630,7 +669,7 @@ Where
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org5a62334}]{Determining Potentially Optimal Regions}
+\begin{frame}[label={sec:orgd2d169e}]{Determining Potentially Optimal Regions}
 \begin{itemize}
 \item Convex hull \autocites{grahamEfficientAlgorithDetermining1972}[][]{jarvisIdentificationConvexHull1973}[][]{chanOptimalOutputsensitiveConvex1996}[][]{barberQuickhullAlgorithmConvex1996} of region size vs. center value
 \end{itemize}
@@ -639,7 +678,7 @@ Where
 \includegraphics[width=0.6\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/direct-convex-hull.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org7172f36}]{DiRECT for Joint Track Machine Learning}
+\begin{frame}[label={sec:orgc1dfe15}]{DiRECT for Joint Track Machine Learning}
 \begin{itemize}
 \item Search region is along all 6 degrees of freedom.
 \begin{itemize}
@@ -660,13 +699,13 @@ Stage & Budget [Iterations] & Search Range [mm,deg] & Dilation (pixels)\\
 \end{tabular}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org7658817}]{Testing Performance}
+\begin{frame}[label={sec:org44f3779}]{Testing Performance}
 Now that we have our refined poses, how well does out system perform?
 \begin{center}
 \includegraphics[width=\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/jtml-pipeline.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgc1b5f55}]{Validation}
+\begin{frame}[label={sec:orgaa3db90}]{Validation}
 \begin{itemize}
 \item Independent research group using Model-Based RSA.
 \item Determine the level of concordance between the two measurement systems
@@ -681,15 +720,15 @@ Now that we have our refined poses, how well does out system perform?
 \includegraphics[width=0.7\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/broberg-bland-altmann.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgc672077}]{Awards}
+\begin{frame}[label={sec:orgf8c28fb}]{Awards}
 The work presented in this aim won the HAP Paul Award for Best Paper from the International Society for Technology in Arthroplasty's 2022 Annual Meeting.
 \begin{center}
 \includegraphics[width=0.7\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/ista-hap-paul-talk.png}
 \end{center}
 \end{frame}
 \subsection{Aim 2 - Correcting Symmetric Implant Ambiguity}
-\label{sec:orgce4bf55}
-\begin{frame}[label={sec:orgacc31b9}]{Goal}
+\label{sec:org54787ba}
+\begin{frame}[label={sec:orge12b42f}]{Goal}
 \begin{itemize}
 \item The goal of this aim is to validate and test methods that can overcome single-plane limitations for model-image registration.
 \begin{itemize}
@@ -698,7 +737,7 @@ The work presented in this aim won the HAP Paul Award for Best Paper from the In
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org67836da}]{Symmetry Traps}
+\begin{frame}[label={sec:org646f77d}]{Symmetry Traps}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 With a symmetric tibial implant, the contour is not always a perfect heuristic for true pose.
@@ -712,7 +751,7 @@ Found ``ambiguous zone'' within \(3^{\circ}\) of pure lateral pose with high pro
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org5d3094a}]{Solving the Symmetric Pose}
+\begin{frame}[label={sec:orgb386634}]{Solving the Symmetric Pose}
 \begin{columns}
 \begin{column}{0.55\columnwidth}
 Algorithm devised to ``flip'' pose into symmetric counterpart.
@@ -730,7 +769,7 @@ Algorithm devised to ``flip'' pose into symmetric counterpart.
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org1769a81}]{Methods - Training Set}
+\begin{frame}[label={sec:org44510e2}]{Methods - Training Set}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -748,14 +787,14 @@ The input for each sample was \([\theta_{F/E}, \theta_{V/V}, \theta_{I/E}, \psi]
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgcb192f1}]{Methods - Machine Learning}
+\begin{frame}[label={sec:org8449efb}]{Methods - Machine Learning}
 Using \texttt{scikit-learn}, the following classifiers were implemented:
 
 \begin{itemize}
 \item Support Vector Machine, K-Nearest-Neighbors, AdaBoost, Histogram Gradient Boosting, Bagging Estimator, Stacked Generalization, Majority Voting Classifier
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org0099d80},fragile]{Methods - Fixing ``Symmetry Traps''}
+\begin{frame}[label={sec:org74c21bb},fragile]{Methods - Fixing ``Symmetry Traps''}
  For an input image sequence, the following is performed:
 
 \begin{enumerate}
@@ -768,12 +807,12 @@ Using \texttt{scikit-learn}, the following classifiers were implemented:
 \item For all images that are labeled ``ambiguous'', determine which of the two poses is closer to the spline, and take that as the ``correct'' pose.
 \end{enumerate}
 \end{frame}
-\begin{frame}[label={sec:org49a2fcc}]{Results - ML Classification}
+\begin{frame}[label={sec:org3ce2281}]{Results - ML Classification}
 \begin{center}
 \includegraphics[width=\textwidth]{/home/ajensen123@ad.ufl.edu/figures/raster/sym-trap-ML-table.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgc78a4c4}]{Results - Fixing ``Symmetry Traps''}
+\begin{frame}[label={sec:org4ceb9a8}]{Results - Fixing ``Symmetry Traps''}
 \begin{itemize}
 \item Accuracy: 91.9\%
 \item Sensitivity: 0.674
@@ -786,20 +825,20 @@ The distribution of \(\psi\) for correct and incorrect frames was measured.
 \item Average \(\psi_{incorrect} = 7.12^{\circ}\).
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org20fcd06}]{Results - Stratified \(\psi\) Correction Performance}
+\begin{frame}[label={sec:org0f3bcd2}]{Results - Stratified \(\psi\) Correction Performance}
 \begin{center}
 \includegraphics[width=\textwidth]{/home/ajensen123@ad.ufl.edu/figures/raster/stratified-psi-ML-table.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgaf6b91a}]{Discussion}
+\begin{frame}[label={sec:orgbd87a4b}]{Discussion}
 \begin{itemize}
 \item Reliable post-processing method to overcome pernicious issue (30 years in the making!)
 \item Suggests an imaging setup for measuring kinematics slightly off-oblique to escape ``ambiguous zone''
 \end{itemize}
 \end{frame}
 \subsection{Aim 3 - Musings on a ``Kinematics Translator'' and Synthetic Kinematics Data}
-\label{sec:org072a6b8}
-\begin{frame}[label={sec:org94b2fc0}]{A Kinematics Translator?}
+\label{sec:org5ad2b09}
+\begin{frame}[label={sec:org2fb3fc0}]{A Kinematics Translator?}
 \begin{itemize}
 \item We all understand the idea of translating a sentence (say, English) to a different language (say, French).
 \item If we imagine that a kinematics sequence during a specific movement (say, stair rise) is a ``sentence'', could it be ``translated'' into the kinematics sequence from another movement (say, level walking)?
@@ -814,7 +853,7 @@ The distribution of \(\psi\) for correct and incorrect frames was measured.
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgb2014ab}]{A High-Level Mathematical Framework}
+\begin{frame}[label={sec:org42d1a17}]{A High-Level Mathematical Framework}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.65\textwidth]{/home/ajensen123@ad.ufl.edu/figures/raster/ye_geometry_of_generative_models.png}
@@ -826,7 +865,7 @@ Common problems in machine learning can be viewed through this lens:
 \item Overfitting, bias (in the fairness sense), etc
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org82234b9}]{Not enough standardized kinematics data exists}
+\begin{frame}[label={sec:org446e132}]{Not enough standardized kinematics data exists}
 \begin{enumerate}
 \item Different research groups give the same name to different movements.
 \begin{itemize}
@@ -843,13 +882,13 @@ Common problems in machine learning can be viewed through this lens:
 \end{itemize}
 \end{enumerate}
 \end{frame}
-\begin{frame}[label={sec:org6541e89}]{A path forward}
+\begin{frame}[label={sec:org94c350b}]{A path forward}
 With a fully-autonomous system for measuring kinematics, interested research groups have asked us which movements to measure. Should this move toward widespread clinical adoption, standards for ``Kinematics Evaluations'' can be established to homogenize data.
 \end{frame}
 \subsection{Aim 4 - This will definitely work on shoulders, right?}
-\label{sec:org4530e22}
+\label{sec:org61db7cc}
 
-\begin{frame}[label={sec:orga126379}]{Spoiler Alert}
+\begin{frame}[label={sec:orgc3919d8}]{Spoiler Alert}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 No, it won't.
@@ -865,10 +904,10 @@ No, it won't.
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org2ec9202}]{Goal}
+\begin{frame}[label={sec:org695b6d4}]{Goal}
 Establish a protocol for exploring the relative sensitivity of input orientation to projected shape
 \end{frame}
-\begin{frame}[label={sec:org36837af}]{JTML on Shoulders}
+\begin{frame}[label={sec:org8136101}]{JTML on Shoulders}
 \begin{table}[h!]
 \small
 	\caption{Root mean squared differences between JointTrack Machine Learning optimized kinematics and manually registered kinematics on single-plane fluoroscopy} \label{tab:jtml-tsa-tka-vals}
@@ -881,7 +920,7 @@ Establish a protocol for exploring the relative sensitivity of input orientation
 	\end{tabularx}
 \end{table}
 \end{frame}
-\begin{frame}[label={sec:orga66f3e4}]{Improving Error Gradient}
+\begin{frame}[label={sec:org2f0be6b}]{Improving Error Gradient}
 \begin{itemize}
 \item Current cost function formulation (Hamming Distance) is not well suited to ``near'' and ``far'' estimates
 \end{itemize}
@@ -892,7 +931,7 @@ Establish a protocol for exploring the relative sensitivity of input orientation
 	\includegraphics[width=0.3\linewidth]{~/figures/raster/rTSA_hamming.png}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:org8991535}]{Modified Mean Surface Distance}
+\begin{frame}[label={sec:orgea0da52}]{Modified Mean Surface Distance}
 \begin{itemize}
 \item In order to improve error gradient, a modified mean surface distance was incorporated into the cost function.
 \item The mean of the dot product between the projection estimate and a distance map of the CNN segmentation.
@@ -910,7 +949,7 @@ Establish a protocol for exploring the relative sensitivity of input orientation
 \vspace{-5mm}
 {\tiny It didn't work.}
 \end{frame}
-\begin{frame}[label={sec:orgb6217fd}]{Modified Asymmetric Keypoint Distance}
+\begin{frame}[label={sec:org10d1790}]{Modified Asymmetric Keypoint Distance}
 \begin{itemize}
 \item Early psychological research deemed curvature as highly salient for object recognition \autocites{attneaveInformationalAspectsVisual1954}[][]{attneaveQuantitativeStudyShape1956}. This aimed to place additional emphasis on autonomously selected high-curvature regions.
 \begin{itemize}
@@ -922,7 +961,7 @@ Establish a protocol for exploring the relative sensitivity of input orientation
 \includegraphics[width=0.85\textwidth]{/home/ajensen123@ad.ufl.edu/figures/raster/TSA_curvature.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org5402ec2}]{Modified Asymmetric Keypoint Distance}
+\begin{frame}[label={sec:orgb10e9fd}]{Modified Asymmetric Keypoint Distance}
 \begin{itemize}
 \item Utilized a modified asymmetric surface distance on the discrete set of keypoints.
 \end{itemize}
@@ -939,7 +978,7 @@ Establish a protocol for exploring the relative sensitivity of input orientation
 
 {\tiny It didn't work...again.}
 \end{frame}
-\begin{frame}[label={sec:orgdbc0f5b}]{2-Dimensional Shape}
+\begin{frame}[label={sec:org9922edf}]{2-Dimensional Shape}
 \begin{itemize}
 \item \alert{Shape descriptors} offer ways to describe shape numerically \autocites{zhangReviewShapeRepresentation2004}[][]{flusserInvariantShapeDescription1992}.
 \begin{itemize}
@@ -952,7 +991,7 @@ Establish a protocol for exploring the relative sensitivity of input orientation
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgfafc797}]{Invariant Angular Radial Transform Descriptor}
+\begin{frame}[label={sec:org5282169}]{Invariant Angular Radial Transform Descriptor}
 The Invariant Angular Radial Transform provides an orthogonal spatial basis function to describe binary images.
 
 \begin{figure}[htbp]
@@ -961,7 +1000,7 @@ The Invariant Angular Radial Transform provides an orthogonal spatial basis func
 \caption{The basis ``vectors'' for the invariant angular radial transform. From \autocite{leeNewShapeDescription2012}.}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:org798d19e}]{IARTD Feature Vector}
+\begin{frame}[label={sec:org78bf814}]{IARTD Feature Vector}
 The complex feature vector for IARTD is constructed to ensure orthogonality and rotational invariance for the magnitude. Prior to calculation, the image coordinates are normalized such that \((0,0)\) is at the center, and each of the four corners are \((\pm 1, \pm 1)\).
 \begin{equation}
   F_{np} = \int_{0}^{2\pi}\int_{0}^{1} f(\rho,\theta)V_{np}(\rho,\theta)\rho d\rho d\theta
@@ -980,7 +1019,7 @@ The complex feature vector for IARTD is constructed to ensure orthogonality and 
 	\end{split}
 \end{equation}
 \end{frame}
-\begin{frame}[label={sec:org23afc74}]{Normalizing IARTD Feature Vector}
+\begin{frame}[label={sec:org85927cc}]{Normalizing IARTD Feature Vector}
 We normalize the phase of the feature vector to ensure full rotational invariance.
 \begin{equation}
   \begin{split}
@@ -994,7 +1033,7 @@ The final feature vector is constructed with the corrected phase and magnitude v
   IARTD = \{|F'_{np}|,\phi'_{np}\} \text{ where } n\ge0,p\ge2
 \end{equation}
 \end{frame}
-\begin{frame}[label={sec:orge0bb178}]{Methods - Shape Difference}
+\begin{frame}[label={sec:orgef6e9a2}]{Methods - Shape Difference}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 The ``input shapes'' for each implant were the projected implants at \(\pm 30^{\circ}\) along each rotational axis at \(5^{\circ}\) increments.
@@ -1015,7 +1054,7 @@ The ``input shapes'' for each implant were the projected implants at \(\pm 30^{\
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org3001631}]{Methods - Shape Sensitivity}
+\begin{frame}[label={sec:org4dd9c7d}]{Methods - Shape Sensitivity}
 The \(\Delta S(\delta)_{z,x,y}\) vector is normalized to account for overall scale of each element, in-plane rotation inputs are averaged, and the 2-norm of the difference vector is defined as the shape sensitivity.
 
 A larger vector would indicate that the shape changed more for that particular ``input shape'' and perturbation.
@@ -1025,7 +1064,7 @@ A larger vector would indicate that the shape changed more for that particular `
 	\mathbb{S}(\delta)_{x,y} = \dfrac{\sum_{z} \| S(\delta)_{z,x,y} \|_{2}}{N}
 \end{equation}
 \end{frame}
-\begin{frame}[label={sec:org0b75d56}]{Results - Humeral Shape Sensitivity}
+\begin{frame}[label={sec:org577f7b2}]{Results - Humeral Shape Sensitivity}
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.3\linewidth]{~/figures/raster/Humeral_dx_sensitivity.png}
@@ -1035,7 +1074,7 @@ A larger vector would indicate that the shape changed more for that particular `
 	\label{fig:hum_sensitivity_plot}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:org19227ea}]{Results - Glenosphere Shape Sensitivity}
+\begin{frame}[label={sec:org39f1128}]{Results - Glenosphere Shape Sensitivity}
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.3\linewidth]{~/figures/raster/Glenosphere_dx_sensitivity.png}
@@ -1045,7 +1084,7 @@ A larger vector would indicate that the shape changed more for that particular `
 	\label{fig:sca_sensitivity_plot}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:orge2c019e}]{Results - Femoral Shape Sensitivity}
+\begin{frame}[label={sec:orgd43bfca}]{Results - Femoral Shape Sensitivity}
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.3\linewidth]{~/figures/raster/Femoral_dx_sensitivity.png}
@@ -1055,7 +1094,7 @@ A larger vector would indicate that the shape changed more for that particular `
 	\label{fig:fem_sensitivity_plot}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:orge307e24}]{Results - Tibial Shape Sensitivity}
+\begin{frame}[label={sec:org6135a1d}]{Results - Tibial Shape Sensitivity}
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.3\linewidth]{~/figures/raster/Tibial_dx_sensitivity.png}
@@ -1065,7 +1104,7 @@ A larger vector would indicate that the shape changed more for that particular `
 	\label{fig:tib_sensitivity_plot}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:orge66ff02}]{Key Takeaways}
+\begin{frame}[label={sec:org61b01a4}]{Key Takeaways}
 \begin{itemize}
 \item Humeral implant has the lowest \(\delta_y\) sensitivity of all implants, which is the difficult registration axis.
 \item Tibial and glenosphere implants demonstrate a ``valley'' along rotation axis representing near-symmetry.
@@ -1080,7 +1119,7 @@ A larger vector would indicate that the shape changed more for that particular `
     \caption{Glenosphere (left) and tibial (right) $\delta_y$ shape sensitivities.}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:org1d6b301}]{Next Steps}
+\begin{frame}[label={sec:org4253ece}]{Next Steps}
 \begin{itemize}
 \item Newer neural network
 \item Avoid regressing directly on Euler decompositions
@@ -1092,8 +1131,8 @@ A larger vector would indicate that the shape changed more for that particular `
 \end{itemize}
 \end{frame}
 \section{Conclusion}
-\label{sec:org5edd4dd}
-\begin{frame}[label={sec:org27eb6a2}]{Conclusions}
+\label{sec:org0cc0c43}
+\begin{frame}[label={sec:orgaa0bcbd}]{Conclusions}
 Throughout the past four years, I have:
 \begin{enumerate}
 \item Established a fully autonomous method of measuring TKA kinematics from single plane fluoroscopy. This software is used globally by different research groups, and offers
@@ -1101,21 +1140,21 @@ Throughout the past four years, I have:
 \item Developed a pipeline for accessing the relative performance of autonomous registration for different implants, conclusively finding that implant geometry alone is not sufficient for every joint.
 \end{enumerate}
 \end{frame}
-\begin{frame}[label={sec:orgfb66746},fragile, allowframebreaks, label=]{Presentations}
+\begin{frame}[label={sec:org214b7dc},fragile, allowframebreaks, label=]{Presentations}
 \begin{refsection}
   \newrefcontext[sorting=ynt]
   \input{nocites-pres}
   \printbibliography[title=Presentations]
 \end{refsection}
 \end{frame}
-\begin{frame}[label={sec:org2e006a1},fragile, allowframebreaks, label=]{Publications}
+\begin{frame}[label={sec:org51f9eae},fragile, allowframebreaks, label=]{Publications}
 \begin{refsection}
 	\newrefcontext[sorting=ynt]
 	\input{nocites-pubs}
 	\printbibliography[title=Publications]
 \end{refsection}
 \end{frame}
-\begin{frame}[label={sec:orgb96b63b}]{Timeline}
+\begin{frame}[label={sec:org9f1c89a}]{Timeline}
 \begin{center}
 \begin{tabular}{ll}
 Date(s) & Event\\
@@ -1135,7 +1174,7 @@ March 2024 & Revised Symmetry Trap Paper Submitted\\
 \end{tabular}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org9099a1b}]{A Special Thanks}
+\begin{frame}[label={sec:org14ffc8f}]{A Special Thanks}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -1156,7 +1195,7 @@ March 2024 & Revised Symmetry Trap Paper Submitted\\
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org6b4bae5}]{Thank you!}
+\begin{frame}[label={sec:org080c603}]{Thank you!}
 Thanks for listening!!
 
 Any Questions?
@@ -1166,8 +1205,8 @@ Any Questions?
 \end{center}
 \end{frame}
 \section{References}
-\label{sec:org5334ff2}
-\begin{frame}[label={sec:orgca3e573},fragile, allowframebreaks,  label=]{References}
+\label{sec:org316fb41}
+\begin{frame}[label={sec:org37229af},fragile, allowframebreaks,  label=]{References}
 \printbibliography
 \end{frame}
 \end{document}
